<resources>
    <string name="app_name">KoroboAndroidApp</string>
    <string name="appname">Aorobo</string>
    <string name="title_home">ホーム</string>
    <string name="title_dashboard">チャット</string>
    <string name="title_time">勉強時間</string>
    <string name="study_time_today">本日の勉強時間</string>
    <string name="Start">スタート</string>
    <string name="_00_00">00:00</string>
    <string name="reset">リセット</string>
    <string name="button01">Button 01</string>
    <string name="pop01">Pop 01</string>
    <string name="button02">Button 02</string>
    <string name="pop02">Pop 02</string>
    <string name="zero">"0:00:00"</string>
    <string name="menu_home">メイン</string>
    <string name="menu_gallery">勉強</string>
    <string name="menu_slideshow">カレンダー</string>
    <string name="menu_talk">トーク</string>
    <string name="menu_schedule">予定</string>
    <string name="menu_make_schedule">予定追加</string>
    <string name="menu_bluetooth_status">接続状況</string>
    <string name="menu_bluetooth">接続</string>
    <string name="action_settings">Settings</string>
    <string name="pick_date">Pick Date</string>
    <string name="button_add_schedule">予定を追加</string>
    <string name="button_dif_schedule">予定を削除</string>
    <string name="schedule_default_title">予定タイトル</string>
    <string name="schedule_default_limit">残りhoge日</string>
    <string name="schedule_default_period">予定の期間</string>
    <string name="schedule_default_period_num">2021.12.12~2021.12.18</string>
    <string name="schedule_save">保存</string>
    <string name="schedule_start">Start</string>
    <string name="schedule_end">End</string>
    <string name="bluetooth_setting">ころボを接続してください</string>
    <string name="bluetooth_setting2">ころボを探しています</string>
    <string name="to_bluetooth_setting">接続設定へ</string>
    <string name="connected_corobo">接続中のころボ</string>
    <string name="corobo_name">ころボ1号</string>
    <string name="time_start">計測開始</string>
    <string name="time_stop">計測終了</string>
    <string name="del">削除</string>
    <string name="title">title</string>
    <string name="menu_title">タイトルへ戻る</string>
    <string name="fav_now">ただいまの好感度</string>
    <string name="fav_num">14</string>
    <string name="today_task">きょうの予定</string>
    <string name="SERVICE_UUID">6BCE49E8-7169-D10C-8C9E-D564844B2F51</string>
    <string name="favo_Chara_UUID">BFCF8B17-9F65-879B-45CA-C2D4877F4C10</string>
    <string name="event_Chara_UUID">45E321BE-BBDD-4DE2-97BE-8A78BF50DCC1</string>
    <string name="touch_Chara_UUID">EC604712-A2A8-0808-653D-FAF9FD074A2B</string>
    <string name="scale_h">10</string>
    <string name="scale_v">10</string>
    <string name="chart">チャート</string>
    <string name="studychart">一週間の勉強の記録</string>
</resources>