<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEED0"
    tools:context="colob.example.aorobo.ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="58dp"
                        android:src="@drawable/i_ball_katlay"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>

                <TextView
                    android:id="@+id/home_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/menu_schedule"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/frame"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_schedule_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="58dp"
                        android:src="@drawable/i_ball_katlay"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>

                <TextView
                    android:id="@+id/home_study_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@string/study_time_today"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/study_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/frame"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/study_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/_00_00"
                    android:textSize="48sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewhomeicon0"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/null1" />

                    <ImageView
                        android:id="@+id/imageViewhomeicon1"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/null1" />

                    <ImageView
                        android:id="@+id/imageViewhomeicon2"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/null1" />

                    <ImageView
                        android:id="@+id/imageViewhomeicon3"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/null1" />

                    <ImageView
                        android:id="@+id/imageViewhomeicon4"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/null1" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>